--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
             width: 100%;
             max-width: 100%;
             order: 3;
+            overflow: hidden;
         }
         .nav-contact {
             width: 100%;
