--- a/index.html
+++ b/index.html
@@ -128,11 +128,12 @@
         .search-icon-nav {
             position: absolute;
             right: 1rem;
-            top: 50%;
-            transform: translateY(-50%);
+            top: 0;
+            bottom: 0;
+            margin: auto;
+            height: fit-content;
             font-size: 1.2rem;
             pointer-events: none;
-            overflow: hidden; 
         }
         
         /* CONTACTO Y REDES */
