--- a/index.html
+++ b/index.html
@@ -232,8 +232,9 @@
         /* HERO */
         .hero {
             min-height: auto !important;
-            padding: 1.5rem 1rem !important;
-            margin-bottom: 0.5rem !important;
+            height: auto !important;
+            padding: 1rem !important;
+            margin: 0 !important;
         }
         .hero h1 {
             font-size: 2rem !important;
